--- a/index.html
+++ b/index.html
@@ -1,20 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <title>Facebook Clone</title>
+</head>
+<body>
+    <!-- temel -->
+     <div class="all">
+         <div class="main">
+            <div class="container">
+                <div class="row align-items-center justify-content-center">
+                    <!-- logo -->
 
-    <title>Homework4 - Facebook Clone</title>
- 
-  </head>
-  <body>
-     <!-- Content -->
- 
+                    <div class="col-md-7 col-sm-12">
+
+                        <div class="logo">
+                            <div class="primary">
+                                <p class="fs-1 text-primary">facebook</p>
+                            </div>
+                            <h5>Facebook tanıdıklarınla iletişim kurmanı ve hayatında olup bitenleri paylaşmanı sağlar.</h5>
+                        </div>
+
+                    </div>
+                    <!-- giris -->
+                    
+                    <div class="col-md-5 col-sm-12">
+           
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email adress or phone number">
+                        </div>
+
+                        <div class="mb-3">
+                            <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
+                        </div>
+
+                        <div class="d-grid gap-2">
+                            <button type="button" class="btn btn-primary">Log In</button>
+                        </div>
+
+                        <div class=" text-center mt-3">
+                            <a class="text-decoration-none" href="#">Forgotten password?</a>
+                        </div>
+
+                        <hr>
+
+                        <div class="d-grid gap-2 col-6 mx-auto">
+                            <button type="button" class="btn btn-success btn-lg">Crate New Account</button>
+                        </div>
+   
+                        <div class="text-center mt-2">
+                            <p class="fs-6 text-dark"><a href="#" class="fw-bold">Create a Page</a> for a celebrity, brand or business</p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+         </div>
+     </div>
+
+     <!-- footer -->
+
+    <footer>
+
+        <div class="footer">
+            <div class="row">
+
+                <div class="col">
+                    <a href="">English(UK)</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Deutsch</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Türkçe</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Espanol</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Русский</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Kurdî (Kurmancî)</a>
+                </div>
+
+                <div class="col">
+                    <a href="">Português (Brasil)</a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
     <!-- Bootstrap Bundle with Popper --> 
     <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
