--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Facebook Clone</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
 
                         <div class="logo">
                             <div class="primary">
-                                <p class="fs-1 text-primary">facebook</p>
+                                <p class="logo fs-1 text-primary">facebook</p>
                             </div>
                             <h5>Facebook tanıdıklarınla iletişim kurmanı ve hayatında olup bitenleri paylaşmanı sağlar.</h5>
                         </div>
@@ -27,7 +29,7 @@
                     </div>
                     <!-- giris -->
                     
-                    <div class="col-md-5 col-sm-12">
+                    <div class="box col-md-5 col-sm-12">
            
                         <div class="mb-3">
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email adress or phone number">
@@ -64,39 +66,52 @@
 
      <!-- footer -->
 
-    <footer>
+    <footer class="bottom mt-4 pb-4">
 
-        <div class="footer">
-            <div class="row">
-
-                <div class="col">
-                    <a href="">English(UK)</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Deutsch</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Türkçe</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Espanol</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Русский</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Kurdî (Kurmancî)</a>
-                </div>
-
-                <div class="col">
-                    <a href="">Português (Brasil)</a>
-                </div>
-            </div>
+        <div class="container">
+          <a href="">English (UK)</a>
+          <a href="">Türkçe</a>
+          <a href="">Kurdî (Kurmancî)</a>
+          <a href="">العربية </a>
+          <a href="">Zaza </a>
+          <a href="">Deutsch</a>
+          <a href="">Русский</a>
+          <a href="">Français (France) </a>
+          <a href="">فارسی </a>
+          <a href="">Español</a>
+          <a href="">Português (Brasil)</a>
+          <hr/>
+          <a href="">Sign Up</a>
+          <a href="">Login</a>
+          <a href="">Messanger</a>
+          <a href="">Facebook Lite</a>
+          <a href="">Watch</a>
+          <a href="">Places</a>
+          <a href="">Games</a>
+          <a href="">Marketplace</a>
+          <a href="">Facebook Pay</a>
+          <a href="">Jobs</a>
+          <a href="">Oculus</a>
+          <a href="">Portal</a>
+          <a href="">Instagram</a>
+          <a href="">Bulletin</a>
+          <a href="">Local</a>
+          <a href="">Fundraisers</a>
+          <a href="">Services</a>
+          <a href="">Voiting Information Centre</a>
+          <a href="">Groups</a>
+          <a href="">About</a>
+          <a href="">Create Ad</a>
+          <a href="">Create Page</a>
+          <a href="">Developers</a>
+          <a href="">Careers</a>
+          <a href="">Privacy</a>
+          <a href="">Cookies</a>
+          <a href="">Ad Choices</a>
+          <a href="">Terms</a>
+          <a href="">Help</a>
+          <br>
+          <p> Meta &copy; 2021</p>
         </div>
 
     </footer>
